# tiny-renderer

./: CMakeLists.txt  README.md
src/: basictextureshader.cpp  basictextureshader.hpp  geometry.cpp  geometry.hpp  gouraudshader.cpp  gouraudshader.hpp  main.cpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  phongshader.cpp  phongshader.hpp  rendering.cpp  rendering.hpp  scenes.cpp  scenes.hpp  shader.hpp  textureshader.cpp  textureshader.hpp  transform.cpp  transform.hpp  util.hpp  vector.hpp
src/geometry/: CMakeLists.txt  geometry.hpp  trianglemesh.cpp  trianglemesh.hpp
src/math/: CMakeLists.txt  random.hpp  transform.cpp  transform.hpp  vector.hpp
src/rasterization/: CMakeLists.txt  rendering.cpp  rendering.hpp
src/shaders/: CMakeLists.txt  basictextureshader.cpp  basictextureshader.hpp  gouraudshader.cpp  gouraudshader.hpp  phongshader.cpp  phongshader.hpp  shader.cpp  shader.hpp  textureshader.cpp  textureshader.hpp
tgaimage/: tgaimage.cpp
